<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!--
		Copyright 2019 NovaTec Consulting GmbH
   
		Licensed under the Apache License, Version 2.0 (the "License");
		you may not use this file except in compliance with the License.
		You may obtain a copy of the License at
   
		http://www.apache.org/licenses/LICENSE-2.0
   
		Unless required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS" BASIS,
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
		See the License for the specific language governing permissions and
		limitations under the License.
	-->
	
	<groupId>de.envite.bpm</groupId>
	<artifactId>camunda-process-instance-migrator</artifactId>
	<version>1.1.1-SNAPSHOT</version>

	<name>Camunda Process Instance Migrator</name>
	<description>Process Instance Migrator for Camunda BPM</description>
	<url>https://github.com/envite-consulting/camunda-process-instance-migrator</url>
	
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>
	
	<scm>
		<url>https://github.com/envite-consulting/camunda-process-instance-migrator</url>
		<connection>scm:git:git:/github.com/envite-consulting/camunda-process-instance-migrator.git</connection>
		<developerConnection>scm:git:git@github.com:envite-consulting/camunda-process-instance-migrator.git</developerConnection>
		<tag>1.0.0</tag>
	</scm>
	
	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus snapshot repository</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-staging</id> 
			<name>Sonatype Nexus release repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>		
	</distributionManagement>
		
	<properties>
		<camunda.version>7.23.0</camunda.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <sonar.organization>${env.SONAR_ORGANIZATION}</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.sources>src/main/java</sonar.sources>
    <sonar.tests>src/test/java</sonar.tests>
	</properties>
	
	<dependencies>
    <dependency>
			 <groupId>org.camunda.bpm</groupId>
			 <artifactId>camunda-engine</artifactId>
			 <version>${camunda.version}</version>
			 <scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.camunda.bpm.springboot</groupId>
			<artifactId>camunda-bpm-spring-boot-starter-test</artifactId>
			<version>${camunda.version}</version>
			<scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.junit.vintage</groupId>
          <artifactId>junit-vintage-engine</artifactId>
        </exclusion>
      </exclusions>
		</dependency>

    <dependency>
      <groupId>org.camunda.bpm</groupId>
      <artifactId>camunda-bpm-junit5</artifactId>
      <version>${camunda.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.4.240</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.camunda.bpm.assert</groupId>
		    <artifactId>camunda-bpm-assert</artifactId>
		    <version>15.0.0</version>
		    <scope>test</scope>
		</dependency>
	
		<dependency>
			<groupId>org.camunda.bpm.extension.mockito</groupId>
			<artifactId>camunda-bpm-mockito</artifactId>
			<scope>test</scope>
			<version>5.16.0</version>
		</dependency>
		
		<!-- Project Lombok requires IDE extension! -->
		<dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
            <scope>provided</scope>            
        </dependency>
	</dependencies>
	
	<build>
		<resources>
			<resource>
				<directory>${project.basedir}</directory>
				<includes>
					<include>README*</include>
					<include>NOTICE*</include>
					<include>LICENSE*</include>
				</includes>
			</resource>
		</resources>

		<plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.1</version>
        <configuration>
          <release>21</release>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.42</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

			<!-- Optional: ensure the manifest contains artifact version information: -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<!-- Required: source JAR -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Required: javadoc JAR -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<executions>
					<execution>
						<id>attach-javadoc</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Release configuration: -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.1.1</version>

				<configuration>
					<!-- Automated passphrase entry: -->

					<!-- To pass your passphrase to the build automatically, so avoiding 
						manual interaction, you'll need to put the passphrase into settings.xml. 
						You don't really want that to be in plain text, so you'll want to follow: 
						http://maven.apache.org/guides/mini/guide-encryption.html -->
					<!-- <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments> -->

					<!-- Manual passphrase entry: -->

					<!-- This is the simplest secure solution, but requires you to type 
						your key passphrase in manually when performing a release. No biggie unless 
						you want your CI server to decide when to release for you. -->
					<mavenExecutorId>forked-path</mavenExecutorId>

				</configuration>
			</plugin>
			
			<!-- Deployment -->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.7.0</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>sonatype-nexus-staging</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>

      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <java>
            <googleJavaFormat>
            </googleJavaFormat>
          </java>
        </configuration>
      </plugin>
		</plugins>
	</build>

	<profiles>

		<!-- GPG Signature on release -->
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

	</profiles>

	<!-- Required: developer information: -->
	<developers>
		<developer>
			<id>BenFuernrohr</id>
			<name>Benjamin Fuernrohr</name>
			<email>Benjamin.Fuernrohr@novatec-consulting.de</email>
			<organization>Novatec Consulting GmbH</organization>
			<organizationUrl>http://www.novatec-gmbh.de/</organizationUrl>
			<url>https://github.com/NovatecConsulting</url>
		</developer>
    <developer>
      <id>CRoberto1926</id>
      <name>Roberto Cortini</name>
      <email>roberto.cortini@envite.de</email>
      <organization>envite consulting GmbH</organization>
      <organizationUrl>https://envite.de/</organizationUrl>
      <url>https://github.com/envite-consulting</url>
    </developer>
    <developer>
      <id>nyuuyn</id>
      <name>Kálmán Képes</name>
      <email>kalman.kepes@envite.de</email>
      <organization>envite consulting GmbH</organization>
      <organizationUrl>https://envite.de/</organizationUrl>
      <url>https://github.com/envite-consulting</url>
    </developer>
	</developers>
</project>
